--- a/SwfViewer/Controls/TagsTabControl.xaml
+++ b/SwfViewer/Controls/TagsTabControl.xaml
@@ -7,6 +7,7 @@
              xmlns:swfViewer="clr-namespace:SwfViewer"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:command="http://www.galasoft.ch/mvvmlight"
+             xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance viewModels:TagsTabViewModel}">
@@ -32,6 +33,6 @@
                 </i:EventTrigger>
             </i:Interaction.Triggers>
         </ListView>
-        <TextBox Grid.Column="1" IsReadOnly="True" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" Text="{Binding Tag, Converter={StaticResource TagConverter}}"/>
+        <avalonedit:TextEditor Grid.Column="1" IsReadOnly="True" VerticalScrollBarVisibility="Auto" FontFamily="Consolas" SyntaxHighlighting="XML" Document="{Binding Tag, Converter={StaticResource TagConverter}}"/>
     </Grid>
 </UserControl>
