--- a/SwfViewer/Controls/TagsTabControl.xaml
+++ b/SwfViewer/Controls/TagsTabControl.xaml
@@ -24,14 +24,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TextBox Grid.Row="0" Grid.Column="0"  x:Name="FilterTextBox">
-            <i:Interaction.Triggers>
-                <i:EventTrigger EventName="TextChanged">
-                    <command:EventToCommand  Command="{Binding FilterStringChangedCommand}"
-                                             CommandParameter="{Binding Text, ElementName=FilterTextBox}" />
-                </i:EventTrigger>
-            </i:Interaction.Triggers>
-        </TextBox>
+        <TextBox Grid.Row="0" Grid.Column="0" Text="{Binding Filter, UpdateSourceTrigger=PropertyChanged}"/>
         <ListView Width="220" Grid.Row="1" Grid.Column="0" x:Name="TagsList" ItemsSource="{Binding Tags}">
             <ListView.ItemTemplate>
                 <DataTemplate>
